# Kosmos-X

./: .gitignore  README.md  TRAINING.md  benchmarking.py  dockerCommands.txt  example.py  example_lang.py  model.py  model_test.py  pyproject.toml  requirements.txt  setup.py  train.py  training.py
.github/workflows/: pytest-gpu.yaml
Kosmos/: __init__.py  inference.py  model.py  model_test.py  tokenize.py  tokenize_hf.py  train.py  train_distributed.py  train_kosmos_stable_2.py  training.py  training_distributed_accelerate.py
Kosmos/model/allModalities/: kosmos.py  kosmos2.py  notes.txt
Kosmos/training/: train_kosmos.py  train_kosmos_stable_2.py  train_kosmos_stable_3.py  training_distributed_accelerate.py
Kosmos/utils/: model_test.py
docs/: DATASET_TRAINING.md  MONETIZATION.md  TRAINING.md
experimental/model/: kosmos.py
infra/: Dockerfile  docker-compose.yml
kosmosx/: __init__.py  inference.py  model.py  tokenize.py  train.py
kosmosx/model/: kosmos.py
model/: kosmos.py
model/allModalities/: kosmos.py  kosmos3.py  notes.txt
model/audio/: kosmos_audio_data2vec.py  kosmos_conditional.py
model/experiments/: kosmosSP.py
old/training/: train_kosmos_stable_2.py  training.py  training_distributed_accelerate.py
testing/: attention.py  benchmarking.py  main.py  model_test.py
tests/: README.md  test_attention.py  test_benchmarking.py  test_kosmos.py  test_kosmos_lang.py
training/: train_kosmos.py
training/experiments/: train_kosmos.py  train_kosmos_code.py  train_kosmos_optimized.py  training_kosmos_apex.py
training/notebookExperiments/: main.py
(+32 files in other folders)
